--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/dbprojetospring
-spring.datasource.username=bob
-spring.datasource.password=bob
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
